--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "eslint-plugin-react": "7.18.0",
     "webpack": "4.41.5",
     "webpack-cli": "3.3.10",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "3.10.1"
   },
   "engines": {
     "node": "10"
@@ -28,6 +28,8 @@
     "prop-types": "15.7.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-router-dom": "5.1.2"
+    "react-redux": "7.2.0",
+    "react-router-dom": "5.1.2",
+    "redux": "4.0.5"
   }
 }
